2025-06-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/vi-modeline.el (vi-modeline-apply): Prevent stack overflow.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	Update secrets.el

	* site-lisp/secrets.el (secrets-open-session-functions): New variable
	(secrets-session-algorithm): Change to generic object.
	(secrets-session-aes-key): Remove variable.
	(secrets-algorithm-encrypt, secrets-algorithm-decrypt): New method.
	(secrets-open-session-plain)
	(secrets-open-session-dh-ietf1024-sha256-aes128-cbc-pkcs7): New functions.
	(secrets-open-session): Use `secrets-open-session-functions'.
	(secrets-close-session): Reset `secrets-session-algorithm'.
	(secrets-create-item): Use `secrets-algorithm-encrypt'.
	(secrets-get-secret): Use `secrets-algorithm-decrypt'.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Remove copilot-chat.

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	Add `elfeed'

	* init.el (mode-specific-map): Bind E to `elfeed'.
	* packages.el (elfeed):

2025-06-17  Zhengyi Fu  <i@fuzy.me>

	* transient/values.el (gptel-menu): Add --prune --tags to
	`magit-fetch'.

2025-06-16  Zhengyi Fu  <i@fuzy.me>

	* init.el: Force shorter `tramp-compat-temporary-file-directory' value.

2025-06-16  Zhengyi Fu  <i@fuzy.me>

	Update secrets.el

	* site-lisp/secrets.el (secrets-unibyte-string-to-integer): Fix typo.
	(secrets-random, secrets-generate-priv-key)
	(secrets-priv-key-to-pub-key): New function.
	(secrets-generate-key-pair): Remove function.
	(secrets-compute-aes-key, secrets-open-session): Use the new
	functions.

2025-06-16  Zhengyi Fu  <i@fuzy.me>

	* init.el (vc-svn-global-switches): Only use kwallet for password-store.

2025-06-15  Zhengyi Fu  <i@fuzy.me>

	Fix problem on Fedora

	* packages.el (reader): Do not use pkg-config module for libmupdf,
	which doesn't exist on Fedora.

2025-06-15  Zhengyi Fu  <i@fuzy.me>

	Fix compatibility problem

	* init.el: Don't use quit-window-kill-buffer if not bound.

2025-06-15  Zhengyi Fu  <i@fuzy.me>
